k8s/gatekeeper/test/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: frontend
spec:
  podSelector: {}        # applies to all pods in the namespace
  policyTypes:
    - Ingress            # block incoming traffic
    - Egress             # block outgoing traffic
