k8s/gatekeeper/test/deny-sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-bad-autommount
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
automountServiceAccountToken: true  # ❌ disallowed
