k8s/gatekeeper/test/fixed-sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-safe
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
# note: do NOT set automountServiceAccountToken: true
