k8s/gatekeeper/test/namespace-fixed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    project: client
    environment: dev
    owner: adam
    netpol: deny-all-policy
