k8s/gatekeeper/test/pod-fixed-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-conf
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
data:
  default.conf: |
    server {
        listen 8080;
        server_name localhost;

        location / {
            root   /usr/share/nginx/html;
            index  index.html index.htm;
        }
    }
