k8s/gatekeeper/test/pod-fixed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: test-super-good
  ports:
    - port: 80       # exposed port in cluster
      targetPort: 8080 # container port
