k8s/gatekeeper/test/privileged-sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-privileged
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
